--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@
 body {
     background-color: rgba(224, 232, 255, 1);
 }
+
 .background-image{
     max-width: 100%;
     height: 437px;
@@ -107,10 +108,9 @@ body {
 }
 .order-buttons{
     width: 100%;
-    display: flex;
-    flex-wrap: wrap;
-    gap: 24px;
-    justify-content: center;
+    display: grid;
+    grid-template-columns: auto;
+    justify-items: center;
     margin-top: 32px;
 }
 .order-button{
@@ -128,6 +128,7 @@ body {
     background-color: #766CF1;
 }
 .order-buttons > a{
+    margin-top: 20px;
     font-size: 15px;
     font-weight: 900;
     color: #717FA6;
@@ -155,7 +156,7 @@ body {
         margin-left: 24px;
     }
     .container{
-        margin-right: 16px;
+        /* margin-right: 16px; */
     }
     .order-component-description{
         gap: 16px;
